--- a/src/app/components/users/allUsers/allUsers.component.html
+++ b/src/app/components/users/allUsers/allUsers.component.html
@@ -1,11 +1,16 @@
 <div class="container-fluid">
     <div class="row p-5">
-        <mat-card class="example-card col-3 d-flex">
+        <div class="col-md-2">
+            <button mat-button (click)="addUser()">Add User</button>
+        </div>
+    </div>
+    <div class="row p-5 gx-2 gy-5">
+        <mat-card class="example-card col-2 d-flex" *ngFor="let user of users|async">
             <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu" class="align-self-end">
                 <mat-icon>more_vert</mat-icon>
             </button>
             <mat-menu #menu="matMenu">
-                <button mat-menu-item>
+                <button mat-menu-item (click)="editUser(user.id)">
                     <mat-icon>edit</mat-icon>
                     <span>Edit</span>
                 </button>
@@ -15,10 +20,13 @@
                 </button>
             </mat-menu>
             <mat-card-header class="d-flex flex-column w-100 h-75 align-items-center">
-                <div mat-card-avatar [ngClass]="active == true? 'active' :'inactive'" class="profile-image"></div>
-                <mat-card-title class="text-center">Dipali Khatri</mat-card-title>
-                <mat-card-subtitle class="text-center">khatri_dipali@bernier-runte.io</mat-card-subtitle>
+                <div mat-card-avatar [ngClass]="user.status == 'active'? 'active' :'inactive'" class="profile-image"></div>
+                <mat-card-title class="text-center">{{user.name}}</mat-card-title>
+                <mat-card-subtitle class="text-center">{{user.email}}</mat-card-subtitle>
             </mat-card-header>
+            <mat-card-actions>
+                <button mat-button>View Posts</button>
+              </mat-card-actions>
         </mat-card>
     </div>
 </div>
