update user comiit

--- a/src/app/components/users/add-Edit/user/user.component.html
+++ b/src/app/components/users/add-Edit/user/user.component.html
@@ -12,8 +12,8 @@
               <mat-form-field appearance="outline">
                 <mat-label>Gender</mat-label>
                 <mat-select formControlName="gender">
-                  <mat-option value="active">male</mat-option>
-                  <mat-option value="inactive">female</mat-option>
+                  <mat-option value="male">male</mat-option>
+                  <mat-option value="female">female</mat-option>
                 </mat-select>
               </mat-form-field>
               <mat-form-field appearance="outline">
