--- a/src/app/components/users/add-Edit/user/user.component.html
+++ b/src/app/components/users/add-Edit/user/user.component.html
@@ -23,7 +23,7 @@
                   <mat-option value="inactive">inactive</mat-option>
                 </mat-select>
               </mat-form-field>
-              <button mat-button [disabled]="!form.valid">Add User</button>
+              <button mat-button [disabled]="!form.valid" class="submitButton">{{buttonText}}</button>
 
         </form>
     </div>
