--- a/src/app/components/users/add-Edit/user/user.component.css
+++ b/src/app/components/users/add-Edit/user/user.component.css
@@ -2,3 +2,9 @@
     width: max-content;
     height: auto;
 }
+.submitButton{
+    background-color: aliceblue;
+}
+:host ::ng-deep .mat-mdc-dialog-container .mdc-dialog__surface{
+    overflow: hidden !important;
+}
